--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     </header>
 
     <section
+      id="down"
       id="turkey-tour"
       class="relative bg-cover bg-center text-white py-16"
     >
@@ -202,7 +203,7 @@
       style="background-image: url(/img/photo_2024-12-03_15-37-42.jpg)"
     >
       <div class="bg-opacity-50 bg-black py-12 px-6 mt-20 rounded-3xl">
-        <h2 id="down" class="text-4xl font-serif text-center text-white mb-12">
+        <h2 class="text-4xl font-serif text-center text-white mb-12">
           Мои услуги — Ваши выгоды
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -809,7 +810,10 @@
                 class="text-3xl hover:text-gray-300"
               ></ion-icon>
             </a>
-            <a href="https://www.youtube.com/@%D0%91%D0%B0%D0%B9%D0%B5%D1%80%D0%A1%D1%82%D0%B0%D0%BC%D0%B1%D1%83%D0%BBm" target="_blank">
+            <a
+              href="https://www.youtube.com/@%D0%91%D0%B0%D0%B9%D0%B5%D1%80%D0%A1%D1%82%D0%B0%D0%BC%D0%B1%D1%83%D0%BBm"
+              target="_blank"
+            >
               <ion-icon
                 name="logo-youtube"
                 class="text-3xl hover:text-gray-300"
