--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
       </div>
     </section>
 
-    <section class="bg-gray-50 py-16">
+    <section id="pricing" class="bg-gray-50 py-16">
       <h2 class="text-4xl font-serif text-center text-gray-800 mb-12">
         Стоимость услуг
       </h2>
