--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      name="facebook-domain-verification"
+      content="f3xd00ov4mutpdn4jqypioe1otojkx"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -92,16 +96,16 @@
       <div
         class="h-screen bg-opacity-50 bg-black flex items-left justify-center flex-col"
       >
-        <div class="text-center px-10 max-[496px]:px-4 mt-40">
+        <div class="text-center px-10 max-[496px]:px-4 mt-60">
           <h1
-            class="text-left animate-fadeInUp text-white text-2xl md:text-5xl"
+            class="leading-7 text-left animate-fadeInUp text-white text-2xl md:text-5xl"
           >
             Здравствуйте! Я — Юлия,
             <br />
             Ваш личный байер по оптовым закупкам в Турции
           </h1>
           <p
-            class="text-left animate-fadeInUp mt-4 text-gray-100 font-medium text-md md:text-lg"
+            class="leading-5 text-left animate-fadeInUp mt-2 text-gray-100 font-medium text-md md:text-lg"
           >
             <span class="font-semibold">
               Купите товары на сумму от $1500 и получите невероятный бонус —
@@ -109,14 +113,14 @@
             </span>
             <br />
             - Представьте, как ваша работа превращается в удовольствие: <br />-
-            Вы находите лучшие товары для своего бизнеса. <br />
+            Вы находите лучшие товары для своего бизнеса <br />
             - И отправляетесь в сказочный тур Antalya – Pamukkale – Cappadocia –
             Antalya.
           </p>
         </div>
         <div>
           <h1
-            class="text-center animate-fadeInUp text-white text-xl md:text-2xl mt-16"
+            class="text-center animate-fadeInUp text-white text-xl md:text-2xl mt-8"
           >
             Заманчиво? Тогда читайте дальше!
           </h1>
@@ -153,35 +157,35 @@
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Продолжительность:
               </h3>
-              <p>8 дней / 7 ночей.</p>
+              <p>8 дней / 7 ночей</p>
             </div>
             <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Проживание:
               </h3>
-              <p>В отелях 4–5*.</p>
+              <p>В отелях 4–5*</p>
             </div>
             <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Питание:</h3>
-              <p>Завтраки (шведский стол).</p>
+              <p>Завтраки (шведский стол)</p>
             </div>
             <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Экскурсии:</h3>
               <ul class="list-disc pl-4">
-                <li>Обзорная экскурсия по Анталии.</li>
-                <li>Двухдневная поездка в Каппадокию.</li>
-                <li>Экскурсия в Памуккале.</li>
+                <li>Обзорная экскурсия по Анталии</li>
+                <li>Двухдневная поездка в Каппадокию</li>
+                <li>Экскурсия в Памуккале</li>
               </ul>
             </div>
             <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Трансферы:</h3>
-              <p>По всему маршруту.</p>
+              <p>По всему маршруту</p>
             </div>
             <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Профессиональный гид:
               </h3>
-              <p>Историк от Министерства Туризма.</p>
+              <p>Историк от Министерства Туризма</p>
             </div>
           </div>
         </div>
@@ -224,16 +228,16 @@
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
               - Найду женскую, мужскую и детскую одежду, включая
-              модест-коллекции.
+              модест-коллекции
               <br />
-              - Подберу текстиль: постельное белье, полотенца, шторы, ковры.
+              - Подберу текстиль: постельное белье, полотенца, шторы, ковры
               <br />
-              - Организую закупку аксессуаров для дома и ванной комнаты.
+              - Организую закупку аксессуаров для дома и ванной комнаты
             </p>
             <div class="w-1/2 h-[1px] bg-slate-500 mt-2"></div>
             <h3 class="text-2xl font-sans text-slate-800">Мои гарантии:</h3>
             <p class="text-gray-700 font-[100] text-md">
-              Аудит фабрик и проверка качества.<br />
+              Аудит фабрик и проверка качества<br />
               Полный контроль от выбора до отправки.
             </p>
           </div>
@@ -243,23 +247,17 @@
             <h3 class="text-2xl font-sans text-slate-800">
               Производство товаров под вашим брендом<br />
               <span class="text-sm font-thin line-clamp-2"
-                >Мечтаете создать свою коллекцию? Это реально<span
-                  class="font-medium"
+                >Мечтаете создать свою коллекцию?<span class="font-medium"
                   >!</span
                 >
               </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
-              - Найду фабрику для работы по вашим лекалам или фото.
+              - Найду фабрику для работы по вашим лекалам или фото
               <br />
-              - Организую пошив тестового образца. <br />
-              - Лично проверю каждый этап: от материалов до упаковки.
-              <span class="font-semibold text-sm line-clamp-2">
-                Результат: ваш бренд будет ассоциироваться с высоким качеством и
-                стилем.
-                <span class="font-medium">.</span>
-              </span>
+              - Организую пошив тестового образца <br />
+              - Лично проверю каждый этап: от материалов до упаковки
             </p>
           </div>
 
@@ -278,12 +276,12 @@
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
             <p class="text-gray-700 font-[100] text-md">
-              - Я организую встречи с производителями.
+              - Я организую встречи с производителями
               <br />
-              - Проведу переговоры и помогу получить лучшие условия.
+              - Проведу переговоры и помогу получить лучшие условия
               <br />
               - Убедитесь сами: вы получите товары, которые покорят ваших
-              клиентов.
+              клиентов
             </p>
           </div>
         </div>
@@ -533,11 +531,7 @@
       </section>
     </div>
     <h2 class="text-4xl font-serif text-center mb-12">Отзывы</h2>
-    <section
-      id="carouselReviews"
-      class="carousel slide"
-      data-ride="carousel"
-    >
+    <section id="carouselReviews" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li
           data-target="#carouselExampleIndicators"
@@ -555,63 +549,81 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
       </ol>
       <div class="carousel-inner flex gap-6 p-8">
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item active">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item active"
+        >
           <img
             src="./img/01.png"
             alt="Отзыв 1"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/02.png"
             alt="Отзыв 2"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/03.png"
             alt="Отзыв 3"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/04.png"
             alt="Отзыв 4"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/05.png"
             alt="Отзыв 5"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/06.png"
             alt="Отзыв 6"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/07.png"
             alt="Отзыв 7"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/08.png"
             alt="Отзыв 8"
             class="w-full h-auto rounded-lg"
           />
         </div>
-        <div class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item">
+        <div
+          class="flex-shrink-0 p-2 bg-zinc-200 shadow-lg rounded-lg carousel-item"
+        >
           <img
             src="./img/09.png"
             alt="Отзыв 9"
@@ -652,7 +664,7 @@
         <div>
           <ul class="space-y-2">
             <li class="text-2xl font-medium text-gray-800">
-              ✅ <strong>5 лет опыта работы в Турции.</strong>
+              ✅ <strong>5 лет опыта работы в Турции</strong>
             </li>
             <li class="text-xl font-medium text-gray-800">
               ✅ <strong>240+ проверенных фабрик:</strong> только лучшие
@@ -663,7 +675,7 @@
               организацию.
             </li>
             <li class="text-xl font-medium text-gray-800">
-              ✅ <strong>Глубокое знание рынка Турции.</strong>
+              ✅ <strong>Глубокое знание рынка Турции</strong>
             </li>
           </ul>
         </div>
@@ -682,7 +694,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Автотранспорт
           </h3>
-          <p class="text-lg text-gray-700">От $3/кг, 10–25 дней.</p>
+          <p class="text-lg text-gray-700">От $3/кг, 10–25 дней</p>
         </div>
         <div
           class="p-8 bg-gradient-to-br from-white to-gray-100 rounded-3xl shadow-lg hover:shadow-2xl transition"
@@ -691,7 +703,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Авиадоставка
           </h3>
-          <p class="text-lg text-gray-700">От $7/кг, 1–8 дней.</p>
+          <p class="text-lg text-gray-700">От $7/кг, 1–8 дней</p>
         </div>
         <div
           class="p-8 bg-gradient-to-br from-white to-gray-100 rounded-3xl shadow-lg hover:shadow-2xl transition"
@@ -700,7 +712,7 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Морской контейнер
           </h3>
-          <p class="text-lg text-gray-700">От $5000, 14+ дней.</p>
+          <p class="text-lg text-gray-700">От $5000, 14+ дней</p>
         </div>
       </div>
     </section>
@@ -714,12 +726,10 @@
           Как начать сотрудничество?
         </h2>
         <ol class="space-y-6 text-2xl text-gray-100 list-decimal list-inside">
-          <li><strong>Напишите мне:</strong> расскажите, что вам нужно.</li>
-          <li>
-            <strong>Подбор фабрик:</strong> я найду подходящих производителей.
-          </li>
-          <li><strong>Организация закупок:</strong> всё под ключ.</li>
-          <li><strong>Контроль качества:</strong> вплоть до доставки.</li>
+          <li>Напишите мне свой запрос</li>
+          <li>Подбор фабрик: я найду подходящих производителей</li>
+          <li>Организация закупок: всё под ключ</li>
+          <li>Контроль качества: вплоть до доставки</li>
         </ol>
       </div>
     </section>
@@ -742,13 +752,13 @@
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Производство под брендом
           </h3>
-          <p class="text-lg text-gray-700">$200 + 1,5–5% от суммы заказа.</p>
+          <p class="text-lg text-gray-700">$200 + 1,5–5% от суммы заказа</p>
         </div>
         <div class="p-6 bg-white shadow-lg rounded-xl">
           <h3 class="text-2xl font-semibold text-gray-800 mb-2">
             Личное сопровождение
           </h3>
-          <p class="text-lg text-gray-700">$200 в день.</p>
+          <p class="text-lg text-gray-700">$200 в день</p>
         </div>
       </div>
     </section>
@@ -784,7 +794,7 @@
         <div class="flex flex-col items-start">
           <p class="text-lg font-serif leading-relaxed mb-4">
             📩 Напишите мне прямо сейчас! Я помогу превратить ваши бизнес-идеи в
-            реальность. <br />✨ Турция - не только бизнес, но и отдых!
+            реальность <br />✨ Турция - не только бизнес, но и отдых!
             <br />
             Телефон:
             <a href="tel:+375297174741" class="underline hover:text-gray-300"
@@ -839,8 +849,10 @@
     <div
       class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full"
     >
-      © 2024 Julizturkey. Cайт разработан командой
-      <a class="font-semibold text-xs text-zinc-300" href="https://www.instagram.com/ascending_sales_online/"
+      © 2024 Julizturkey Cайт разработан командой
+      <a
+        class="font-semibold text-xs text-zinc-300"
+        href="https://www.instagram.com/ascending_sales_online/"
         >https://www.instagram.com/ascending_sales_online/</a
       >.
     </div>
@@ -1037,5 +1049,41 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "610044131350472");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=610044131350472&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
   </body>
 </html>
