--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
           <h1
             class="leading-7 text-left animate-fadeInUp text-white text-2xl md:text-5xl"
           >
-            Здравствуйте! Я — Юлия,
-            <br />
-            Ваш личный байер по оптовым закупкам в Турции
+            Я — Юлия, Ваш личный байер по оптовым закупкам в Турции
           </h1>
           <p
             class="leading-5 text-left animate-fadeInUp mt-2 text-gray-100 font-medium text-md md:text-lg"
@@ -112,10 +110,10 @@
               отдых в Турции в ПОДАРОК!
             </span>
             <br />
-            - Представьте, как ваша работа превращается в удовольствие: <br />-
-            Вы находите лучшие товары для своего бизнеса <br />
-            - И отправляетесь в сказочный тур Antalya – Pamukkale – Cappadocia –
-            Antalya.
+            1. Представьте, как ваша работа превращается в удовольствие: <br />
+            2. Вы находите лучшие товары для своего бизнеса <br />
+            3. И отправляетесь в сказочный тур Анталия -
+            Памуккале-Каппадокия-Анталия
           </p>
         </div>
         <div>
@@ -139,9 +137,9 @@
       id="turkey-tour"
       class="relative bg-cover bg-center text-white py-16"
     >
-      <div style="background-image: url('./img/yt.png')">
+      <div class="bg-cover" style="background-image: url('./img/yt.png')">
         <div
-          class="container mx-auto px-6 md:px-12 text-center bg-black/60 p-8 rounded-lg"
+          class="container mx-auto px-6 md:px-12 text-center bg-black/30 p-8 rounded-lg"
         >
           <h2 class="text-4xl font-serif font-bold mb-6">
             Что включено в ваш подарок — тур в Турцию?
@@ -153,23 +151,23 @@
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left"
           >
             <!-- Описание тура -->
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Продолжительность:
               </h3>
               <p>8 дней / 7 ночей</p>
             </div>
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Проживание:
               </h3>
               <p>В отелях 4–5*</p>
             </div>
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Питание:</h3>
               <p>Завтраки (шведский стол)</p>
             </div>
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Экскурсии:</h3>
               <ul class="list-disc pl-4">
                 <li>Обзорная экскурсия по Анталии</li>
@@ -177,11 +175,11 @@
                 <li>Экскурсия в Памуккале</li>
               </ul>
             </div>
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">Трансферы:</h3>
               <p>По всему маршруту</p>
             </div>
-            <div class="p-4 bg-white/70 text-gray-800 rounded-lg shadow-lg">
+            <div class="p-4 bg-white/40 text-gray-800 rounded-lg shadow-lg">
               <h3 class="text-xl font-bold text-orange-600 mb-2">
                 Профессиональный гид:
               </h3>
@@ -287,7 +285,7 @@
         </div>
       </div>
     </section>
-    <h2 class="text-4xl font-serif text-center text-gray-800 my-12">
+    <h2 class="text-4xl font-serif text-center text-gray-800 mt-12">
       Товары, с которыми я работаю
     </h2>
     <div class="flex justify-center items-center bg-zinc-100 py-2 my-12">
@@ -530,8 +528,20 @@
         </a>
       </section>
     </div>
+    <section class="pb-12 px-4 text-center">
+      <h2 class="text-2xl font-serif mb-2">
+        Не нашли товар, который интересен вам?<br>
+        <span class="text-base"> Свяжитесь со мной и обсудим ваш запрос. </span>
+      </h2>
+      <button
+        class="bg-red-600 text-white py-2 px-6 rounded-3xl hover:bg-red-700 transition-all"
+        onclick="window.location.href='mailto:your-email@example.com';"
+      >
+        Связаться со мной
+      </button>
+    </section>
     <h2 class="text-4xl font-serif text-center mb-12">Отзывы</h2>
-    <section id="carouselReviews" class="carousel slide" data-ride="carousel">
+    <section id="carouselReviews" class="carousel slide mx-auto" data-ride="carousel">
       <ol class="carousel-indicators">
         <li
           data-target="#carouselExampleIndicators"
