--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
         <ul
           class="menu flex space-x-4 mt-1 max-[708px]:space-y-2 menu items-center"
         >
-          <li class="text-zinc-700 text-md font-sans hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
             <a href="#services">Услуги</a>
           </li>
-          <li class="text-zinc-700 text-md font-sans hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
             <a href="#reviews">Отзывы</a>
           </li>
-          <li class="text-zinc-700 text-md font-sans hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
             <a href="#pricing">Стоимость</a>
           </li>
-          <li class="text-zinc-700 text-md font-sans hover:text-zinc-800 mr-2">
+          <li class="text-zinc-700 text-md font-serif hover:text-zinc-800 mr-2">
             <a href="#contact">Контакты</a>
           </li>
         </ul>
@@ -213,7 +213,7 @@
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-sans text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800">
               Оптовые закупки товаров<br />
               <span class="font-thin text-sm line-clamp-2">
                 Зачем искать поставщиков самостоятельно и тратить на это свое
@@ -233,7 +233,7 @@
               - Организую закупку аксессуаров для дома и ванной комнаты
             </p>
             <div class="w-1/2 h-[1px] bg-slate-500 mt-2"></div>
-            <h3 class="text-2xl font-sans text-slate-800">Мои гарантии:</h3>
+            <h3 class="text-2xl font-serif text-slate-800">Мои гарантии:</h3>
             <p class="text-gray-700 font-[100] text-md">
               Аудит фабрик и проверка качества<br />
               Полный контроль от выбора до отправки.
@@ -242,7 +242,7 @@
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-sans text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800">
               Производство товаров под вашим брендом<br />
               <span class="text-sm font-thin line-clamp-2"
                 >Мечтаете создать свою коллекцию?<span class="font-medium"
@@ -263,7 +263,7 @@
           <div
             class="px-6 py-2 bg-white/70 shadow-lg border-slate-800 border rounded-3xl hover:shadow-xl transition duration-300"
           >
-            <h3 class="text-2xl font-sans text-slate-800">
+            <h3 class="text-2xl font-serif text-slate-800">
               Личное сопровождение на закупках
               <span class="text-sm font-thin line-clamp-2"
                 >Для тех, кто хочет всё видеть своими глазами<span
@@ -540,7 +540,7 @@
         Связаться со мной
       </button>
     </section>
-    <h2 class="text-4xl font-serif text-center mb-12">Отзывы</h2>
+    <h2 id="reviews" class="text-4xl font-serif text-center mb-12">Отзывы</h2>
     <section id="carouselReviews" class="carousel slide mx-auto" data-ride="carousel">
       <ol class="carousel-indicators">
         <li
@@ -837,14 +837,14 @@
                 class="text-3xl hover:text-gray-300"
               ></ion-icon>
             </a>
-            <a href="https://facebook.com" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=61550654170466" target="_blank">
               <ion-icon
                 name="logo-facebook"
                 class="text-3xl hover:text-gray-300"
               ></ion-icon>
             </a>
             <a
-              href="https://www.youtube.com/@%D0%91%D0%B0%D0%B9%D0%B5%D1%80%D0%A1%D1%82%D0%B0%D0%BC%D0%B1%D1%83%D0%BBm"
+              href="https://www.youtube.com/@%D0%91%D0%B0%D0%B9%D0%B5%D1%80%D0%A1%D1%82%D0%B0%D0%BC%D0%B1%D1%83%D0%BB"
               target="_blank"
             >
               <ion-icon
@@ -859,7 +859,7 @@
     <div
       class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full"
     >
-      © 2024 Julizturkey Cайт разработан командой
+      © 2024 Julizturkey. Все права защищены. Cайт разработан командой
       <a
         class="font-semibold text-xs text-zinc-300"
         href="https://www.instagram.com/ascending_sales_online/"
