--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
       </div>
     </footer>
     <div
-      class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full"
+      class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
       © 2024 Julizturkey. Все права защищены. Cайт разработан командой
       <a
