--- a/index.html
+++ b/index.html
@@ -116,19 +116,20 @@
             Памуккале-Каппадокия-Анталия
           </p>
         </div>
-        <div>
+        <div class="relative">
           <h1
-            class="text-center animate-fadeInUp text-white text-xl md:text-2xl mt-8"
+            class="text-center gradient-text animate-fadeInUp text-white text-xl md:text-2xl mt-8 glow-effect"
           >
             Заманчиво? Тогда читайте дальше!
           </h1>
           <p
             id="scrollDownBtn"
-            class="animate-fadeInUp cursor-pointer bounce mt-6 text-center text-white text-6xl"
+            class="animate-fadeInUp cursor-pointer bounce text-center text-white text-6xl mt-2 pulse-effect"
           >
             <ion-icon name="chevron-down-outline"></ion-icon>
           </p>
         </div>
+        
       </div>
     </header>
 
@@ -193,7 +194,7 @@
       <a
         href="https://wa.me/375297174741"
         target="_blank"
-        class="inline-block px-8 py-4 text-lg font-bold text-white bg-red-500 hover:bg-green-600 rounded-full transition duration-300 shadow-lg"
+        class="inline-block px-4 py-4 text-lg font-bold text-white bg-red-600 hover:bg-red-500 rounded-full transition duration-300 shadow-lg"
         aria-label="Написать в WhatsApp"
       >
         Связаться со мной
@@ -215,12 +216,8 @@
           >
             <h3 class="text-2xl font-serif text-slate-800">
               Оптовые закупки товаров<br />
-              <span class="font-thin text-sm line-clamp-2">
-                Зачем искать поставщиков самостоятельно и тратить на это свое
-                время, деньги и нервы? Я сделаю это за вас<span
-                  class="font-medium"
-                  >:</span
-                >
+              <span class="font-thin text-sm leading-none">
+                Зачем искать поставщиков самостоятельно и тратить на это время
               </span>
             </h3>
             <div class="w-1/2 h-[1px] bg-slate-500 my-2"></div>
@@ -244,9 +241,9 @@
           >
             <h3 class="text-2xl font-serif text-slate-800">
               Производство товаров под вашим брендом<br />
-              <span class="text-sm font-thin line-clamp-2"
-                >Мечтаете создать свою коллекцию?<span class="font-medium"
-                  >!</span
+              <span class="text-sm font-thin leading-1"
+                >Мечтаете создать свою коллекцию<span class="font-medium"
+                  >?!</span
                 >
               </span>
             </h3>
@@ -265,7 +262,7 @@
           >
             <h3 class="text-2xl font-serif text-slate-800">
               Личное сопровождение на закупках
-              <span class="text-sm font-thin line-clamp-2"
+              <span class="text-sm font-thin leading-1"
                 >Для тех, кто хочет всё видеть своими глазами<span
                   class="font-medium"
                   >:</span
@@ -530,18 +527,24 @@
     </div>
     <section class="pb-12 px-4 text-center">
       <h2 class="text-2xl font-serif mb-2">
-        Не нашли товар, который интересен вам?<br>
-        <span class="text-base"> Свяжитесь со мной и обсудим ваш запрос. </span>
+        Не нашли товар, который интересен вам?<br />
+        <span class="text-base"> Свяжитесь со мной и обсудим ваш запрос</span>
       </h2>
-      <button
-        class="bg-red-600 text-white py-2 px-6 rounded-3xl hover:bg-red-700 transition-all"
-        onclick="window.location.href='mailto:your-email@example.com';"
+      <a
+        href="https://wa.me/375297174741"
+        target="_blank"
+        aria-label="Написать в WhatsApp"
+        class="inline-block mt-4 px-4 py-2 text-lg font-bold text-white bg-red-600 hover:bg-red-500 rounded-full transition duration-300 shadow-lg"
       >
         Связаться со мной
-      </button>
+      </a>
     </section>
     <h2 id="reviews" class="text-4xl font-serif text-center mb-12">Отзывы</h2>
-    <section id="carouselReviews" class="carousel slide mx-auto" data-ride="carousel">
+    <section
+      id="carouselReviews"
+      class="carousel slide mx-auto"
+      data-ride="carousel"
+    >
       <ol class="carousel-indicators">
         <li
           data-target="#carouselExampleIndicators"
@@ -837,7 +840,10 @@
                 class="text-3xl hover:text-gray-300"
               ></ion-icon>
             </a>
-            <a href="https://www.facebook.com/profile.php?id=61550654170466" target="_blank">
+            <a
+              href="https://www.facebook.com/profile.php?id=61550654170466"
+              target="_blank"
+            >
               <ion-icon
                 name="logo-facebook"
                 class="text-3xl hover:text-gray-300"
@@ -859,7 +865,8 @@
     <div
       class="border-t border-white/30 py-4 mt-8 bg-zinc-900 text-center text-zinc-500 text-sm absolute left-0 w-full px-4"
     >
-      © 2024 Julizturkey. Все права защищены. Cайт разработан командой
+      © 2024 Julizturkey. Все права защищены. <br />
+      Cайт разработан командой <br />
       <a
         class="font-semibold text-xs text-zinc-300"
         href="https://www.instagram.com/ascending_sales_online/"
